# rl-debt-collection-thesis

./: .gitignore  README.md  phase1_5_prompt_v5_final.md  phase3_formula_lock.md  pytest.ini  requirements.txt
examples/rl/: README.md  environment.py  main.py  models.py  pyproject.toml  rl_decision.py  rl_types.py  train.py  transformation.py
examples/rl/data/: abt_base_202405.csv  abt_base_202406.csv  abt_base_202407.csv  abt_base_202408.csv  abt_base_202409.csv  abt_base_202410.csv  abt_base_202411.csv  abt_base_202412.csv  accounts.csv  clients.csv  collection_actions.csv  metadata.json  summary_abt_202405.csv  summary_abt_202406.csv  summary_abt_202407.csv  summary_abt_202408.csv  summary_abt_202409.csv  summary_abt_202410.csv  summary_abt_202411.csv  summary_abt_202412.csv  transactions.csv
examples/rl/models/: model
examples/rl/runs/Jul18_10-05-49_dom/: events.out.tfevents.1752825949.dom.22675.0
examples/rl/runs/Jul18_10-06-13_dom/: events.out.tfevents.1752825973.dom.22675.1
examples/rl/runs/Jul18_10-06-36_dom/: events.out.tfevents.1752825996.dom.22675.2
examples/rl/runs/Jul18_10-07-01_dom/: events.out.tfevents.1752826021.dom.22675.3
examples/rl/runs/Jul18_10-07-26_dom/: events.out.tfevents.1752826046.dom.22675.4
examples/rl/runs/a/: abt_base_202405.csv  (+51 more)
rl-debt-collection/: README.md  pyproject.toml
rl-debt-collection/src/rl_debt_collection/: __init__.py  abt.py  abt_behavioral_columns.py  clients_code.py  special_types.py  summary.py  tables_types.py  util.py
rl-debt-collection/tests/: test_abt.py  test_client.py  test_summary.py  test_util.py
(+292 files in other folders)
