[project]
name = "rl-debt-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "akmere", email = "rafkam0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rl_debt_collection"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
    "uv-build>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "./src/rl_debt_collection"
]
